# chatbot

./: LICENSE  pyproject.toml  requirements.txt
data/: manual.txt
notebooks/: RAG.ipynb  langchain_practice.ipynb  offline_process.ipynb  poc.ipynb  test.ipynb
vectorstore/: index.faiss  index.pkl
