[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "navinnimaidas", email = "navinnimaidas.bav@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
chatbot = "chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
