[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "navinnimaidas", email = "navinnimaidas.bav@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "cachetools>=7.1.1",
    "faiss-cpu>=1.13.2",
    "google-generativeai>=0.8.6",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-milvus>=0.3.3",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "lxml>=6.1.0",
    "markdown>=3.10.2",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-box>=7.4.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "unstructured>=0.18.32",
]

[project.scripts]
chatbot = "chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
